--- a/styles/keyboard.module.css
+++ b/styles/keyboard.module.css
@@ -1,5 +1,9 @@
-.keyboardRow {
+
+.keyboard {
+  margin-top: 20px;
+  max-width: 530px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
@@ -12,6 +16,7 @@
   width: 45px;
   border-radius: 5px;
   margin: 4px;
+  flex: 0 1 45px;
 }
 
 .alt {
@@ -33,8 +38,4 @@
 .keyboardButton.misplaced {
   background: #c6b566;
   color: white;
-}
-
-.keyboard {
-  margin-top: 20px;
 }
